# whl-dyn

./: .gitignore  README.md  README_CN.md  RELEASE_VALIDATION.md  pyproject.toml
docs/: USER_GUIDE.md
whl-dyn/: COMMANDS.md  collect_data.py  data_collector.py  example_commands.txt  generate_plan.py  params.yaml  plot.py  plot_data.py  plot_grid.py  preprocess.py  process.py  process_data.py  process_data.sh  result2pb.py  run_batch.py  sanity_check.py  util.py
whl-dyn/test_data/: calibration_data.txt
whl-dyn/tools/: README.md  calibration_plan.yaml  collect_data.py  plot.py  process.py
whl_dyn/: cli.py
whl_dyn/collection/: collector.py
whl_dyn/planning/: generator.py
whl_dyn/processing/: config.py  data_core.py  exporter.py  metrics.py
whl_dyn/ui/: app.py
