[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-dyn"
version = "0.1.0"
description = "A dynamic vehicle control automation tool"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = [
    "matplotlib",
    "numpy",
    # add other required packages here
]

[project.urls]
Homepage = "https://example.com/whl-dyn"
Repository = "https://github.com/yourusername/whl-dyn"

[tool.setuptools]
packages = ["whl_dyn"]
