[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "whl-dyn"
version = "0.2.0"
description = "Vehicle longitudinal dynamics calibration pipeline"
authors = [
    { name="wheelos-tools" }
]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.7"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "scikit-learn",
    "pyyaml",
    "matplotlib",
    "plotly",
    "streamlit",
]

[project.urls]
Repository = "https://github.com/wheelos-tools/whl-dyn"

[project.scripts]
whl-dyn = "whl_dyn.cli:main"

[tool.setuptools]

[tool.setuptools.packages.find]
include = ["whl_dyn*"]
